--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,6 @@
     <title>HTML 5 Boilerplate</title>
 </head>
 <body>
-    <p>My name is Safi</p>
+    <p>Your name is {{ name }}</p>
 </body>
 </html>
